# flask-merchants-sm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  celery_app.py  docker-compose.yml  flask_app.py  pyproject.toml  wsgi.py
app/: __init__.py  celery.py  core.py  database.py  docs.py  forms.py  logging_config.py  model.py  routes.py  settings.py  store.py  tasks.py  views.py
app/apoderado/: apoderado_tests.py  controller.py  registro.md  route.py
app/docs_site/: 404.html  index.html  sitemap.xml
app/docs_site/faq/: index.html
app/docs_site/glosario/: index.html
app/docs_site/search/: search_index.json
app/extensions/: __init__.py  admin.py
app/flyers/: route.py
app/migrations/: MIGRATION_README.md  alembic.ini
app/migrations/versions/: 0001_init.py  020c5cb260aa_init_12.py  18fce6b6bad5_init_9.py  1c659aae9e49_check.py  1c659aae9e49_check.py.old  2e47724a9982_init_3.py  37b3743f0968_check.py.old  3839fc86dfcf_init_13.py  3a2c99e54bfc_init_7.py  3e09568495e7_stock_menudiario.py  48a837bfc45d_stock_menudiario.py  5bfc4fdbefb4_updates.py  69b7ab61e5a3_init_15.py  6d75f70bc239_init.py  7ca93bc6b615_init_14.py  9490ccd65be6_init_11.py  95446e2c53be_init_4.py  a1b2c3d4e5f6_unique_apoderado_usuario.py  a472a74ad0df_init.py  a7b8c9d0e1f2_refactor_payment_mixin.py.old  a879adbfc59e_init.py  a9285953b117_init_10.py  b1c2d3e4f5a6_create_merchants_payment.py  c1f4d2e83a9b_almuerzo_registro.py  d69fad1d513c_init_5.py  e1f2a3b4c5d6_init.py  e1f2a3b4c5d6_pedido_apoderado_id.py  e3b49f2f7a6f_init_1.py  f2a3b4c5d6e7_school_staff.py  f4a641ca06c2_init_6.py  (+2 more)
app/pos/: crud.py  reader.py  routes.py
app/providers/: __init__.py  cafeteria.py  saldo.py
app/staff/: controller.py  route.py  scheduler.py
app/templates/: base-bare.html  base-pos.html  base-security.html  base-sitio.j2  base-slim.html  base.html  navbar.html  seleccion.html
deploy/: sm-celery.service  sm-flower.service  sm.service
docs/: mkdocs.yml
docs/docs/: glosario.md  index.md
flask_merchants/: __init__.py  admin.py  core.py  mixins.py  models.py  quart_views.py  routes.py  views.py
flask_merchants/contrib/: __init__.py  admin.py  base.py  sqla.py
flask_merchants/errors/: __init__.py
flask_merchants/templates/: dashboard.html
merchants/: __init__.py  client.py  core.py  exceptions.py  signals.py  webhooks.py
merchants/integrations/: __init__.py  cash.py  casino.py  dummy.py
merchants/providers/: __init__.py  dummy.py  flow.py  generic.py  khipu.py  paypal.py  stripe.py
tests/: conftest.py  test_admin_views.py  test_apoderado_controller.py  test_broken_links.py  test_cafeteria_provider.py  test_celery_env.py  test_forms.py  test_gestor_menu.py  test_khipu_provider.py  test_khipu_signature.py  test_logging_config.py  test_pos_crud.py  test_redis_cli_views.py  test_saldo_provider.py  test_school_staff_controller.py  test_staff_scheduler.py  test_webhook_notifications.py
(+458 files in other folders)
