[project]
name = "sabormirandiano"
version = "2026.2.6"
description = "SaborMirandiano"
authors = [{ name = "Mario Hernandez", email = "mariofix@proton.me" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-security[babel,common,fsqla] (>=5.6.2,<6.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "flask-admin[images,sqlalchemy-with-utils,translation] (>=2.0.2,<3.0.0)",
    "flask-babel (>=4.0.0,<5.0.0)",
    "celery[redis,sqlalchemy] (>=5.6.0,<6.0.0)",
    "flask-mailman (>=1.1.1,<2.0.0)",
    "gunicorn",
    "wtforms-sqlalchemy (>=0.4.2,<0.5.0)",
    "flask-debugtoolbar",
    "requests (>=2.32.5,<3.0.0)",
    "sentry-sdk[flask] (>=2.53.0,<3.0.0)",
    "flask-limiter (>=3.5,<5.0)",
    "khipu-tools (>=2025.1.0,<2026.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "faker (>=33.0.0,<41.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
